<resources>
    <string name="app_name">ArtistBooking</string>
    <string name="medium">fonts/robotomedium.ttf</string>
    <string name="regular">fonts/robotoregular.ttf</string>
    <string name="bold">fonts/robotobold.ttf</string>
    <string name="myraid">fonts/myraidproregular.ttf</string>
    <string name="gobold">fonts/goboldregular.ttf</string>
    <string name="title_activity_home">HOME</string>
    <string name="bio">Shreya Ghoshal (born 12 March 1984)[2] is an Indian playback singer. She has received four National Film Awards, six Filmfare Awards including five for Best Female Playback Singer, nine Filmfare Awards South (one for Telugu, two for Kannada, two for Tamil and four for Malayalam) with three Kerala State Film Awards, one Tamil Nadu State Film Award and several other major awards to date. She has recorded songs for film music in various Indian languages, and has established herself as a leading playback singer of Indian cinema.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_search">Search</string>
    <string name="action_notfiy">Notifications</string>
    <string name="dummy"><b>\"Hindusthan classical\"</b> is the hindustani or North indian style of classical music</string>

    <string name="permission_title_rationale">Permission needed</string>
    <string name="permission_read_storage_rationale">Storage read permission is needed to pick files.</string>
    <string name="permission_write_storage_rationale">Storage write permission is needed to save the image.</string>

    <string name="label_sample">sample</string>
    <string name="label_aspect_ratio">Aspect ratio</string>
    <string name="label_dynamic">Dynamic</string>
    <string name="label_image_source">Image source</string>
    <string name="label_square">Square</string>
    <string name="label_max_cropped_image_size">Max cropped image size</string>
    <string name="label_compression_settings">Compression settings</string>
    <string name="label_ui">UI</string>
    <string name="label_width">Width</string>
    <string name="label_height">Height</string>
    <string name="label_resize_image_to_max_size">Resize image to max size</string>
    <string name="label_hide_bottom_ui_controls">Hide bottom UI controls</string>
    <string name="label_freestyle_crop">Freestyle crop</string>
    <string name="label_select_picture">Select Picture</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_ok">OK</string>

    <string name="notification_image_saved">Image saved</string>
    <string name="notification_image_saved_click_to_preview">Image saved. Click to preview.</string>

    <string name="menu_download">Download</string>

    <string name="button_pick_amp_crop"><![CDATA[Pick & Crop]]></string>
    <string name="button_crop_random_image">Crop random image</string>

    <string name="description_cropped_image">Cropped image</string>
    <string name="name">Name</string>
    <string name="lName">Last Name</string>
    <string name="numsongs">Number of Songs/Events</string>
    <string name="biography">Biography</string>
    <string name="phone">Phone Number</string>
    <string name="address">Address</string>

    <string name="format_crop_result_d_d">Crop Result (%1$dx%2$d)</string>
    <string name="format_quality_d">Quality: %d</string>
    <string name="format_d_d_px">%1$dx%2$d px</string>
    <string name="about">\t\t\t\t\tOver the last 20 years we have recieved a number of requirements recieved from clients. We successfully conducted 20000 events with celebreties all over india.\n\n\t\t\t\t\tShreya Ghoshal (born 12 March 1984)[2] is an Indian playback singer. She has received four National Film Awards, six Filmfare Awards including five for Best Female Playback Singer, nine Filmfare Awards South (one for Telugu, two for Kannada, two for Tamil and four for Malayalam) with three Kerala State Film Awards, one Tamil Nadu State Film Award and several other major awards to date. She has recorded songs for film music in various Indian languages, and has established herself as a leading playback singer of Indian cinema.</string>

    <string name="toast_cannot_retrieve_selected_image">Cannot retrieve selected image</string>
    <string name="toast_cannot_retrieve_cropped_image">Cannot retrieve cropped image</string>
    <string name="toast_unexpected_error">Unexpected error</string>
    <string name="city">City</string>
    <string name="email">Email</string>
    <string name="mobile">Phone Number</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>