<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".EditProfileActivity">
    <LinearLayout
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="1dp"
        app:cardBackgroundColor="@color/white"
        android:elevation="3dp"
        app:cardUseCompatPadding="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_marginTop="16dp"
            >
            <bigappcompany.com.artistbooking.widgets.MyCustomEditText
                android:hint="@string/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="10dp"
            >
            <bigappcompany.com.artistbooking.widgets.MyCustomEditText
                android:hint="@string/lName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
</android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="1dp"
        app:cardBackgroundColor="@color/white"
        android:elevation="3dp"
        app:cardUseCompatPadding="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <bigappcompany.com.artistbooking.widgets.MyCustomMedTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textSecondary"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_marginTop="16dp"
                android:textSize="@dimen/text_large"
                android:text="@string/biography"/>
            <bigappcompany.com.artistbooking.widgets.MyCustomEditText
                android:inputType="textPostalAddress"
                android:layout_width="match_parent"
                android:textColor="@color/textSecondary"
                android:background="@drawable/bt_bg"
                android:gravity="top|left"
                android:paddingTop="5dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_margin="10dp"
                android:layout_height="100dp" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="1dp"
        app:cardBackgroundColor="@color/white"
        android:elevation="3dp"
        app:cardUseCompatPadding="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_marginTop="16dp"
                >
                <bigappcompany.com.artistbooking.widgets.MyCustomEditText
                    android:hint="@string/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_marginTop="16dp"
                >
                <bigappcompany.com.artistbooking.widgets.MyCustomEditText
                    android:hint="@string/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>
